--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -7,6 +7,13 @@
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
+** native compile 配置
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/early-init.el") :comments link
+     (setenv "PATH" "")
+     (setenv "LIBRARY_PATH" "")
+     (setenv "LD_LIBRARY_PATH" "")
+     (setq native-comp-driver-options "")
+   #+END_SRC
 ** 使用代理进行访问
    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      ;;(setq url-proxy-services '(("https" . "127.0.0.1:1089")
