feat: update yabai and skhd config

--- a/hammers/yabai/config.org
+++ b/hammers/yabai/config.org
@@ -12,51 +12,75 @@
     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/yabai/yabairc") :tangle-mode (identity #o755) :comments link
       #!/usr/bin/env sh
 
-      yabai -m space 1 --label one
-      yabai -m space 2 --label two
-      yabai -m space 3 --label three
-      yabai -m space 4 --label four
-      yabai -m space 5 --label five
-      yabai -m space 6 --label six
+      # necessary to load scripting-addition during startup on macOS Big Sur
+      # *yabai --load-sa* is configured to run through sudo without a password
+      sudo yabai --load-sa
+      yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
-      yabai -m rule --add app="^Emacs$" layer=above manage=off
+      # mission-control desktop labels
+      yabai -m space 1 --label code
+      yabai -m space 2 --label mail
+      yabai -m space 3 --label web
+      yabai -m space 4 --label notes
+      yabai -m space 5 --label re
+      yabai -m space 6 --label media
+      yabai -m space 7 --label social
+      yabai -m space 8 --label games
 
-      yabai -m rule --add app="^Microsoft Remote Desktop$" manage=off
+      # window rules
+      yabai -m rule --add app="^Mail$" space=mail
+      yabai -m rule --add app="^Safari$" space=web
+      yabai -m rule --add app="^Notes$" space=notes
+      yabai -m rule --add app="^ida64$" space=re
+      yabai -m rule --add app="^Transmission$" space=media
+      yabai -m rule --add app="^Spotify$" space=media
+      yabai -m rule --add app="^Discord$" space=social grid=1:1:0:0:1:1 manage=off
+      yabai -m rule --add app="^Steam$" space=games manage=off
+      yabai -m rule --add app="^(Calculator|System Preferences|Archive Utility)$" manage=off
+      yabai -m rule --add app="^mpv$" manage=off border=off sticky=on layer=above opacity=1.0 grid=8:8:6:0:2:2
 
-      yabai -m config window_placement second_child
-      yabai -m config window_topmost off
-      yabai -m config window_shadow off
-      yabai -m config window_opacity off
-      yabai -m config window_opacity_duration 0.00
-      yabai -m config active_window_poacity 1.0
+      # signals
+      yabai -m signal --add event=window_destroyed active=yes action="yabai -m query --windows --window &> /dev/null || yabai -m window --focus mouse &> /dev/null || yabai -m window --focus \$(yabai -m query --windows --space | jq .[0].id) &> /dev/null"
+      yabai -m signal --add event=window_minimized active=yes action="if \$(yabai -m query --windows --window \$YABAI_WINDOW_ID | jq -r '.\"is-floating\"'); then yabai -m query --windows --window &> /dev/null || yabai -m window --focus mouse &> /dev/null || yabai -m window --focus \$(yabai -m query --windows --space | jq .[0].id) &> /dev/null; fi"
 
-      yabai -m config window_border off
+      # specific space settings
+      yabai -m config --space mail  layout stack
+      yabai -m config --space games layout float
 
-      yabai -m config auto_balance off
-      yabai -m config split_ratio 0.50
+      # global settings
+      yabai -m config                              \
+          external_bar                off:41:0     \
+          mouse_follows_focus         on           \
+          focus_follows_mouse         autoraise    \
+          window_placement            second_child \
+          window_topmost              off          \
+          window_shadow               off          \
+          window_animation_duration   0.25         \
+          window_opacity_duration     0.25         \
+          active_window_opacity       0.90         \
+          normal_window_opacity       0.50         \
+          window_opacity              off           \
+          insert_feedback_color       0xaad75f5f   \
+          active_window_border_color  0xBF775759   \
+          normal_window_border_color  0x7f353535   \
+          window_border_width         0            \
+          window_border_radius        0           \
+          window_border_blur          off           \
+          window_border_hidpi         off           \
+          window_border               off           \
+          split_ratio                 0.50         \
+          split_type                  auto         \
+          auto_balance                on          \
+          top_padding                 0           \
+          left_padding                0           \
+          right_padding               0           \
+          bottom_padding              0           \
+          window_gap                  0           \
+          layout                      bsp          \
+          mouse_modifier              fn           \
+          mouse_action1               move         \
+          mouse_action2               resize       \
+          mouse_drop_action           swap
 
-
-      yabai -m config mouse_follows_focus          off
-      # focus_follows_mouse: off, autoraise, autofocus
-      yabai -m config focus_follows_mouse          off
-      yabai -m config mouse_modifier ctrl
-      yabai -m config mouse_action2 resize
-      yabai -m config mouse_action1 move
-
-
-      yabai -m config layout float
-      yabai -m config top_padding 0
-      yabai -m config bottom_padding 0
-      yabai -m config left_padding 0
-      yabai -m config right_padding 0
-      yabai -m config window_gap 06
-      yabai -m config insert_feedback_color 0xffd75f5f
-      yabai -m config window_shadow on
-      yabai -m config window_animation_duration 0.0
-      yabai -m config window_opacity_duration 0.0
-      yabai -m config active_window_opacity 1.0
-      yabai -m config normal_window_opacity 0.90
-
-
-      echo "yabai configuration loaded..."
+      echo "yabai configuration loaded.."
     #+END_SRC
