feat(csh): use abs autojump path

--- a/hammers/csh/cshrc.org
+++ b/hammers/csh/cshrc.org
@@ -254,17 +254,20 @@
 *** autojump releated config
     #+BEGIN_SRC sh :tangle (m/resolve "${m/xdg.conf.d}/csh/post/autojump.csh") :eval never :exports code :comments link
       # set user installation paths
-      if (-d ~/.autojump/bin) then
-          set path = (~/.autojump/bin path)
+      if (-d ${HOME}/.autojump/bin) then
+          set path = (${HOME}/.autojump/bin $path)
+          set autojump = ${HOME}/.autojump/bin/autojump
+      else
+          set autojump = autojump
       endif
 
       # prepend autojump to cwdcmd (run after every change of working directory)
       if (`alias cwdcmd` !~ *autojump*) then
-          alias cwdcmd 'setenv AUTOJUMP_SOURCED 1;autojump --add $cwd >/dev/null;'
+          alias cwdcmd 'setenv AUTOJUMP_SOURCED 1;${autojump} --add $cwd >/dev/null;'
       endif
 
       #default autojump command
-      alias j 'setenv AUTOJUMP_SOURCED 1; cd `autojump -- \!:1`'
+      alias j 'setenv AUTOJUMP_SOURCED 1; cd `${autojump} -- \!:1`'
     #+END_SRC
 
 *** direnv related config
